--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!doctype html>
+<html lang="pt-br">
+<head>
+    <meta charset="utf-8">
+    <title>hugodeveloper.io</title>
+</head>
+<body>
+    <h2>hugodeveloper.github.io</h2>
+</body>
+</html>
