Add navbar in page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8">
     <title>hugodeveloper.io</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
+    <link href="assets/css/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/hugodeveloper/css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    <h2>hugodeveloper.github.io</h2>
+    <nav class="hd-navbar">
+        <a href="#">
+            <img src="assets/images/logo.png" width="86" height="86" class="hd-img-logo hidden-md-up" alt="">
+        </a>
+        <a href="#">
+            <span class="hidden-sm-down">
+                <h1 class="hd-text-logo">
+                    <span class="hd-text-logo-bold">HUGO</span>
+                    <span class="hd-text-logo-thin">DEVELOPER</span>
+                </h1>
+            </span>
+        </a>
+    </nav>
 </body>
+
 </html>
