--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
-    <link href="assets/css/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/hugodeveloper/css/style.css" rel="stylesheet">
+    <link href="./assets/hugodeveloper/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="hd-navbar">
-        <a href="#">
+    <nav class="navbar navbar-dark py-0 bg-darkGray navbar-expand-lg py-md-2">
+        <a class="navbar-brand" href="#">
             <img src="assets/images/logo.png" width="86" height="86" class="hd-img-logo hidden-md-up" alt="">
         </a>
-        <a href="#">
-            <span class="hidden-sm-down">
-                <h1 class="hd-text-logo">
-                    <span class="hd-text-logo-bold">HUGO</span>
-                    <span class="hd-text-logo-thin">DEVELOPER</span>
-                </h1>
-            </span>
-        </a>
+        <div class="navbar-collapse collapse" id="navbarNav">
+            <ul class="navbar-nav hd-text-logo">
+                <li class="nav-item py-0"><span class="hd-text-logo-bold">HUGO</span></li>
+                <li class="nav-item py-0"><span class="hd-text-logo-thin">DEVELOPER</span></li>
+            </ul>
+        </div>
     </nav>
 </body>
 
