Ajust index.html

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                     <div class="banner-content">
                         <div class="text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">                
                             <div class="banner-item">
-                                <a [routerLink]="['/about']" >
+                                <a href="#" >
                                     <img src="https://placeholdit.imgix.net/~text?txtsize=15&txt=156%C3%97156&w=156&h=156" alt="..." class="img-thumbnail rounded-circle">
                                 </a>
                                 <h1 class="text-white">Lorem ipsum dolor sit amet</h1>
                                 <h2>{{ 'Home.Subtitle' | translate }}</h2>
                             </div>
                             <div class="scroll-down hidden-xs-down">
-                                <a pageScroll href="#posts">
+                                <a  href="#posts">
                                     <img src="assets/images/scroll-down.gif" width="80" alt="">
                                 </a>
                             </div>
@@ -47,12 +47,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        
-        <div id="posts">
-            <hd-list-posts></hd-list-posts>
-        </div>
-        
+        </div>        
         <div class="container-fluid">
             <div class="row">
                 <div class="contact contact-container">
